# nostr_vanity

./: Cargo.toml  Cross.toml  LICENSE  README.md  patterns.csv
.github/workflows/: release.yml
src/: generator.rs  main.rs  matcher.rs  utils.rs
