[package]
name = "nostr_vanity"
version = "0.0.1"
edition = "2021"
authors = ["TypedCypher"]
description = "A fast Nostr vanity npub address generator"
license = "MIT"

[dependencies]
secp256k1 = { version = "0.31.1", features = ["rand", "global-context"] }
bech32 = "0.11.0"
rayon = "1.11.0"
clap = { version = "4.5.46", features = ["derive"] }
csv = "1.3"
indicatif = "0.18.0"
rand = "0.9.2"
hex = "0.4"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = "1.0.99"
num_cpus = "1.17.0"
crossbeam-channel = "0.5"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1